<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="regular">Регулярность</string>
    <string name="every_day">Каждый день</string>
    <string name="every_week">Каждую неделю</string>
    <string name="every_month">Каждый месяц</string>
    <string name="every_year">Каждый год</string>
    <string name="date">Дата</string>
    <string name="regular1">Регулярность</string>
    <string name="ok">Принять</string>
</resources>